<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Ricoh Theta Camera Plugin</string>
    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>

    <string name="off">OFF</string>
    <string name="dr_comp">DR compensation</string>
    <string name="noise">Noise reduction</string>
    <string name="hdr">HDR Rendering</string>

    <string name="brightness">Brightness</string>
    <string name="lib_app_name">ThetaLib</string>
    <string name="theta_ip_address">192.168.1.1</string>
    <string name="label_btn_shoot">Shoot</string>
    <string name="text_camera_notconnected">Not connected</string>
    <string name="text_camera_standby">Standby</string>
    <string name="text_camera_synthesizing">Image synthesizing</string>

    <string name="menu_configuration">inertia</string>
    <string name="menu_connection">connection</string>
    <string name="rotate_inertia">rotation inertia</string>
    <string name="inertia_0">none</string>
    <string name="inertia_50">weak</string>
    <string name="inertia_100">strong</string>
    <string name="delete_dialog_message">Delete this file?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="label_btn_image_size">Image Size</string>
    <string name="image_size_2048x1024">2048 x 1024</string>
    <string name="image_size_5376x2688">5376 x 2688</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_settings">Setting</string>
    <string name="dialog_no_storage">Please check the access permission for the SD card or storage.</string>
    <string name="dialog_no_theta_wifi">Please check that the wifi is connected to the camera.</string>
    <string name="dialog_no_network_info">Failed to get network information.</string>
    <string name="dialog_could_not_connect">Failed to connect to the camera.</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="dialog_processing">Processing..</string>
    <string name="dialog_connecting_camera">Connecting..</string>
    <string name="dialog_low_version">Shooting function unavailable for below Android 5.0 </string>
    <string name="dialog_neutral_button">Close</string>
    <string name="dialog_why_wifi">To confirm the camera is connected, allow location service access. Check the application settings. </string>
    <string name="glphot_ok_button">OK</string>
    <string name="glphot_cancel_button">Cancel</string>
</resources>