<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text_camera_status"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.airflare.ricoh_theta_plugin.MJpegView
        android:id="@+id/live_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness"
                android:textColor="#ffffff"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" : "
                android:textColor="#ffffff"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text_brightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:textColor="#ffffff"
                android:textSize="18dp" />
        </LinearLayout>


        <SeekBar
            android:id="@+id/sb_brightness"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:background="#000000"
            android:enabled="false"
            android:max="12"
            android:min="0"
            android:progress="9"
            android:progressDrawable="@drawable/progress"
            android:thumb="@drawable/thumb" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_option_off"
                style="@style/option_buttons"
                android:text="@string/off" />

            <Button
                android:id="@+id/btn_option_hdr"
                style="@style/option_buttons"
                android:text="@string/hdr" />

            <Button
                android:id="@+id/btn_option_auto"
                style="@style/option_buttons"
                android:text="@string/dr_comp" />

            <Button
                android:id="@+id/btn_option_noise"
                style="@style/option_buttons"
                android:text="@string/noise" />


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000">
        <Spinner
            android:id="@+id/spinner_timer"
            style="@style/spinner">

        </Spinner>

        <Button
            android:id="@+id/btn_shoot"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/button_shutter"
            android:enabled="false" />

    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />
</LinearLayout>